# unity-nvim-adapter

./: Cargo.toml  README.md
plugin/: unity-nvim-adapter.lua
src/: main.rs
