[package]
name = "unity-nvim-adapter"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Insprill/intellectual"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
strip = true
lto = true
